--- a/questionHTML/headerhtml.html
+++ b/questionHTML/headerhtml.html
@@ -2,10 +2,10 @@ ${e://Field/Header}
 
 <!--cleave JS-->
 <script type="text/javascript"
-    src="https://wellcometrust.eu.qualtrics.com/WRQualtricsControlPanel_rel/File.php?F=F_6yhV3k5JyrZwvk1"></script>
+    src="https://raw.githack.com/MSTRP/IPReport/master/Apps%20and%20plugins/cleave.js"></script>
 <!-- DatePicker Script-->
 <script type="text/javascript"
-    src="https://wellcometrust.eu.qualtrics.com/WRQualtricsControlPanel_rel/File.php?F=F_0NUwkaWBpqW5HWB"></script>
+    src="https://raw.githack.com/MSTRP/IPReport/master/Apps and plugins/foopicker.js"></script>
 <!--IP Library-->
 <script type="text/javascript"
     src="https://raw.githack.com/MSTRP/IPReport/master/Library/IPlibrary.js?token=AMIPDSTGD2ROEJD2PTAI4IC55ZXMM"></script>
