--- a/questionHTML/headerhtml.html
+++ b/questionHTML/headerhtml.html
@@ -1,20 +1,26 @@
 ${e://Field/Header}
-
 <!--cleave JS edit -->
 <script type="text/javascript"
-    src="https://raw.githack.com/MSTRP/IPReport/master/Apps%20and%20plugins/cleave.js"></script>
+    src="https://rawcdn.githack.com/nosir/cleave.js/d1ce937107de54ddbc50c3b6741fac82a56325df/dist/cleave.js"></script>
 <!-- DatePicker Script-->
 <script type="text/javascript"
     src="https://raw.githack.com/MSTRP/IPReport/master/Apps and plugins/foopicker.js"></script>
-<!--IP Library-->
+
+<!--Mouse Trap-->
 <script type="text/javascript"
-    src="https://raw.githack.com/MSTRP/IPReport/master/Library/IPlibrary.js?token=AMIPDSTGD2ROEJD2PTAI4IC55ZXMM"></script>
+    src="https://rawcdn.githack.com/ccampbell/mousetrap/2f9a476ba6158ba69763e4fcf914966cc72ef433/mousetrap.js"></script>
+<!--IP Library-->
+<!-- <script type="text/javascript"
+    src="https://raw.githack.com/MSTRP/MSTRP.github.io/master/JS/Library/IPlibrary.js"></script> -->
+<script type="text/javascript"
+    src="https://raw.githack.com/MSTRP/MSTRP.github.io/Testing/JS/Library/IPlibrary.js"></script>
+
 <!--Header JS-->
 <script type="text/javascript">
     //-----------data references
     var qFilters = {
         ThreeA: "${q://QID8/ChoiceTextEntryValue}",
-        ThreeB: "${q://QID9%235/ChoiceGroup/SelectedChoicesForAnswer/2}",
+        ThreeB: "${q://QID100/ChoiceTextEntryValue}",
         FourD: "${q://QID11/ChoiceTextEntryValue}",
         FiveD: "${q://QID13/ChoiceTextEntryValue}",
         SixAD: "${q://QID15/ChoiceTextEntryValue}",
@@ -22,24 +28,30 @@ ${e://Field/Header}
         SevenD: "${q://QID48/ChoiceTextEntryValue}}",
         EightD: "${q://QID50/ChoiceTextEntryValue}",
         NineD: "${q://QID52/ChoiceTextEntryValue}",
-        TenD: "${q://QID57/ChoiceTextEntryValue}",
-        TenD2: "${e://Field/tRevDisplay}",
-        ElevenD: "${q://QID60/ChoiceTextEntryValue}",
+        ElevenD: "${q://QID57/ChoiceTextEntryValue}",
+        ElevenD2: "${e://Field/tRevDisplay}",
+        TwelveD: "${q://QID60/ChoiceTextEntryValue}",
         Supporting: "${q://QID70/ChoiceGroup/SelectedChoices}"
     };
 
     var filters = [
         { filterRef: "3a", filterName: "disclosures", filterValue: "${q://QID8/ChoiceTextEntryValue}" },
-        { filterRef: "3b", filterName: "patentApps", filterValue: "${q://QID9%235/ChoiceGroup/SelectedChoicesForAnswer/2}" },
+        { filterRef: "3b", filterName: "patentApps", filterValue: "${q://QID100/ChoiceTextEntryValue}" },
         { filterRef: "4", filterName: "grantedPatents", filterValue: "${q://QID11/ChoiceTextEntryValue}" },
         { filterRef: "5", filterName: "otherIP", filterValue: "${q://QID13/ChoiceTextEntryValue}" },
         { filterRef: "6", filterName: "newTransactions", filterValue: "${q://QID15/ChoiceTextEntryValue}" },
         { filterRef: "7", filterName: "liveAgreements", filterValue: "${q://QID48/ChoiceTextEntryValue}" },
         { filterRef: "8", filterName: "terminatedAgreements", filterValue: "${q://QID50/ChoiceTextEntryValue}" },
         { filterRef: "9", filterName: "caseStudies", filterValue: "${q://QID52/ChoiceTextEntryValue}" },
-        { filterRef: "10", filterName: "revenue", filterValue: "${q://QID57/ChoiceTextEntryValue}" },
-        { filterRef: "11", filterName: "equity", filterValue: "${q://QID60/ChoiceTextEntryValue}" }
+        { filterRef: "11", filterName: "revenue", filterValue: "${q://QID57/ChoiceTextEntryValue}" },
+        { filterRef: "12", filterName: "equity", filterValue: "${q://QID60/ChoiceTextEntryValue}" }
     ];
+
+    var listeners = {
+        hotkeyNavigate: "${e://Field/hotKeyNav}",
+        organisation: "${e://Field/organisation}",
+        organisationName: "${q://QID3/ChoiceTextEntryValue/6}"
+    };
 
     Qualtrics.SurveyEngine.addOnload(function () {
         /*var plug = document.getElementById("Plug"); //Get the Defined element
@@ -56,12 +68,15 @@ ${e://Field/Header}
         navlabels()
 
 
-
         //--hide tooltip if present
         jQuery('.tooltip').css("display", "none");
 
+        //---------set org name for generic links:
+        setOrgName();
+
         //------------page loading
         loadPage();//show questions
+
 
         loadScrollPosition(0);//load page at scroll top
     });
